--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "serialize-javascript": "^2.1.2",
     "styled-components": "^4.4.1",
